Added exam dates and first on-campus lecture

--- a/config.toml
+++ b/config.toml
@@ -27,8 +27,8 @@ enableGitInfo = true
 [params]
 
   Course_Deadline_Project = "Monday, 21 March 2022, 5 pm"
-  Course_Exam_Mainsit = "TBA"
-  Course_Exam_Resit = "TBA"
+  Course_Exam_Mainsit = "Tuesday, 5 April 2022"
+  Course_Exam_Resit = "Tuesday, 28 June 2022"
 
 
   # (Optional, default true) Controls table of contents visibility on right side of pages.
